--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24445,7 +24445,7 @@ header {
   margin-left: auto;
   padding-left: 10px;
   padding-right: 10px;
-  padding-top: 26%;
+  padding-top: 28%;
 }
 .container_new_contrib {
   max-width: 90%;
@@ -24484,12 +24484,14 @@ th {
 .inputcodciuu,
 .tablenumiden,
 .tabledomatri,
-.tablecodpost {
+.tablecodpost,
+.tabledoobli {
   width: 80px !important;
   text-align: center !important;
 }
 .tablefechas,
-.tableident {
+.tableident,
+.tableangrav {
   width: 75px !important;
   text-align: center !important;
 }
