--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24433,25 +24433,19 @@ header {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 86%;
+  width: 85%;
   padding: 0 !important;
-  /* 	margin-right: 1px !important; */
-  margin-right: 10%;
-  margin-left: 80px !important;
-  /* 	padding-top: 310px !important; */
 }
 .container_new {
   max-width: 90%;
   height: auto;
   display: block;
-  margin-left: auto;
+  width: 86%;
   margin-right: auto;
-  width: 88%;
-  /* 	padding: 0 !important; */
-  /* 	margin-right: 1px !important; */
-  margin-right: 10%;
-  margin-left: 80px !important;
-  padding-top: 25%;
+  margin-left: auto;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-top: 27%;
 }
 .container_new_contrib {
   max-width: 90%;
@@ -24460,10 +24454,6 @@ header {
   margin-left: auto;
   margin-right: auto;
   width: 86%;
-  /* 	padding: 0 !important; */
-  /* 	margin-right: 1px !important; */
-  margin-right: 10%;
-  margin-left: 80px !important;
   padding-top: 18%;
 }
 .login-section {
@@ -24538,4 +24528,7 @@ th {
   height: 38px !important;
   min-height: 30px !important;
   width: 28%;
+}
+.headline {
+  margin-left: 11px;
 }
