--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -615,6 +615,16 @@ th {
     padding: 0 !important;
     margin-top: 5px;
   }
+    .container_menu {
+    max-width: 90%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+    padding: 0 !important;
+    margin-top: -50px;
+}
 }
 .main-header .md-secondary-navigation a:hover,
 .main-header .md-secondary-navigation a:focus,
