--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24575,6 +24575,16 @@ th {
     padding: 0 !important;
     margin-top: 5px;
   }
+  .container_menu {
+    max-width: 90%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+    padding: 0 !important;
+    margin-top: -50px;
+  }
 }
 .main-header .md-secondary-navigation a:hover,
 .main-header .md-secondary-navigation a:focus,
@@ -24590,4 +24600,104 @@ th {
 }
 .alert-danger {
   margin-bottom: 30px;
+}
+.titulo--ser-rel {
+  font-family: Rajdhani;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 9px;
+  margin-top: 0;
+  border-left: 1px solid #d0d0d0;
+  border-right: 1px solid #d0d0d0;
+  font-weight: 700;
+  text-shadow: 0 0 0 #000;
+  font-size: 1.6em;
+}
+.ser-rel,
+.titulo--ser-rel {
+  border-bottom: 1px solid #d0d0d0;
+}
+.ser-rel svg.flecha-1 {
+  stroke: #ea8795;
+  fill: #ea8795;
+}
+.titulo-caja--ser-rel,
+span.pasos {
+  font-weight: 700;
+  font-family: Rajdhani;
+}
+span.pasos {
+  padding: 1px 22px;
+  display: block;
+  font-size: 2.3em;
+  float: left;
+  margin-right: 13px;
+  position: relative;
+  color: #949494;
+  border-style: dashed;
+  border-width: 2px 2px 0;
+  border-radius: 6px;
+}
+span.paso--dos,
+span.paso--tres,
+span.paso--uno {
+  top: 10px;
+}
+.titulo-caja--ser-rel,
+span.pasos {
+  font-weight: 700;
+  font-family: Rajdhani;
+}
+.titulo-caja--ser-rel {
+  font-size: 1.25em;
+  color: #999;
+  padding-bottom: 5px;
+  border-bottom: 9px solid;
+  padding-top: 12px;
+  margin-bottom: 0;
+}
+.color-sr1 {
+  border-color: #ea8795;
+}
+.pasoClase1,
+.pasoClase2,
+.pasoClase3 {
+  height: 50px;
+  padding: 0px;
+  color: #666;
+  line-height: 30px;
+}
+.color-sr1 {
+  border-color: #ea8795;
+}
+.caja--ser-rel {
+  width: 94%;
+  display: block;
+  float: left;
+  padding: 20px;
+  height: auto;
+  border-style: dashed;
+  border-width: 1px;
+  background-color: #fff;
+  margin-left: 17px;
+}
+.form-control--ser-rel {
+  display: block;
+  width: 100%;
+  height: 53.5px;
+  padding: 0 14px;
+  font-size: 1em;
+  color: #333;
+  border: 3px solid #bfbfbf;
+  background: #fff;
+}
+.color-sr2 {
+  border-color: #bebe73;
+}
+.color-sr3 {
+  border-color: #66bce9;
+}
+.boder_section_cdu {
+  border: 1px dashed #66bce9;
 }
