Se agregan cambios a la sección de mi buzón

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -761,3 +761,33 @@ span.paso--dos, span.paso--tres, span.paso--uno {
 	75%{background: #1B3B6F; width: 100px;}
 	100%{background: #9EB3C2; width: 90px}
 }
+
+.new_tab{
+	color: #000 !important;
+	font-size: 20px ;
+}
+
+.nav .new_tab:active{
+	color: #104d83 !important;
+	font-size: 23px ;
+}
+
+.nav .new_tab:focus{
+	color: #043A53;
+	font-size: 40px ;
+}
+
+.new_active:hover{
+	color: #043A53;
+	background: #E0F8F7 !important;
+}
+
+.new_active.active{
+	color: #156ab5 !important;
+}
+
+
+.new_active{
+	color: #000 !important;
+}
+
