Se agrega animación en el menu con hover

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -600,7 +600,10 @@ th {
 .headline {
   margin-left: 11px;
 }
-@media (max-width: 1024px) {
+@media (max-width: 1025px) {
+.container_new {
+  padding-top: 22%;
+}
   .login-section {
     padding-top: 0px;
     margin-top: -10px;
@@ -745,7 +748,7 @@ span.paso--dos, span.paso--tres, span.paso--uno {
     border: 1px dashed #66bce9;
 }
 
-.imgagen_tran {
+.imgagen_tran:hover {
     animation-name: colores;
 	/*animation-name: colores;*/
 	animation-duration: 5s; /*cuanto tiempo va a durar*/
