Se agregan cambios para diseño responsive

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -561,7 +561,7 @@ th {
 .tablefechas,
 .tableident,
 .tableangrav {
-  width: 75px !important;
+width: 75px !important;
   text-align: center !important;
 }
 .tablenombre,
@@ -600,35 +600,7 @@ th {
 .headline {
   margin-left: 11px;
 }
-@media (max-width: 1025px) {
-.container_new {
-  padding-top: 22%;
-}
-  .login-section {
-    padding-top: 0px;
-    margin-top: -10px;
-  }
-  .container_new_page {
-    max-width: 90%;
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 85%;
-    padding: 0 !important;
-    margin-top: 5px;
-  }
-    .container_menu {
-    max-width: 90%;
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 85%;
-    padding: 0 !important;
-    margin-top: -50px;
-}
-}
+
 .main-header .md-secondary-navigation a:hover,
 .main-header .md-secondary-navigation a:focus,
 .main-header .md-secondary-navigation a:active {
@@ -642,155 +614,314 @@ th {
   padding-top: 25px ;
 }
 .alert-danger {
-
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
-
 .titulo--ser-rel {
-    font-family: Rajdhani;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    padding: 9px;
-    margin-top: 0;
-    border-left: 1px solid #d0d0d0;
-    border-right: 1px solid #d0d0d0;
-    font-weight: 700;
-    text-shadow: 0 0 0 #000;
-    font-size: 1.6em;
+  font-family: Rajdhani;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 9px;
+  margin-top: 0;
+  border-left: 1px solid #d0d0d0;
+  border-right: 1px solid #d0d0d0;
+  font-weight: 700;
+  text-shadow: 0 0 0 #000;
+  font-size: 1.6em;
 }
-.ser-rel, .titulo--ser-rel {
-    border-bottom: 1px solid #d0d0d0;
+.ser-rel,
+.titulo--ser-rel {
+  border-bottom: 1px solid #d0d0d0;
 }
 .ser-rel svg.flecha-1 {
-    stroke: #ea8795;
-    fill: #ea8795;
+  stroke: #ea8795;
+  fill: #ea8795;
 }
-.titulo-caja--ser-rel, span.pasos {
-    font-weight: 700;
-    font-family: Rajdhani;
+.titulo-caja--ser-rel,
+span.pasos {
+  font-weight: 700;
+  font-family: Rajdhani;
 }
 span.pasos {
-    padding: 1px 22px;
-    display: block;
-    font-size: 2.3em;
-    float: left;
-    margin-right: 13px;
-    position: relative;
-    color: #949494;
-    border-style: dashed;
-    border-width: 2px 2px 0;
-    border-radius: 6px;
+  padding: 1px 22px;
+  display: block;
+  font-size: 2.3em;
+  float: left;
+  margin-right: 13px;
+  position: relative;
+  color: #949494;
+  border-style: dashed;
+  border-width: 2px 2px 0;
+  border-radius: 6px;
 }
-span.paso--dos, span.paso--tres, span.paso--uno {
-    top: 10px;
+span.paso--dos,
+span.paso--tres,
+span.paso--uno {
+  top: 10px;
 }
-
-.titulo-caja--ser-rel, span.pasos {
-    font-weight: 700;
-    font-family: Rajdhani;
+.titulo-caja--ser-rel,
+span.pasos {
+  font-weight: 700;
+  font-family: Rajdhani;
 }
 .titulo-caja--ser-rel {
-    font-size: 1.25em;
-    color: #999;
-    padding-bottom: 5px;
-    border-bottom: 9px solid;
-    padding-top: 12px;
-    margin-bottom: 0;
+  font-size: 1.25em;
+  color: #999;
+  padding-bottom: 5px;
+  border-bottom: 9px solid;
+  padding-top: 12px;
+  margin-bottom: 0;
 }
-
 .color-sr1 {
-    border-color: #ea8795;
+  border-color: #ea8795;
 }
-
-.pasoClase1, .pasoClase2, .pasoClase3 {
-    height: 50px;
-    padding: 0px;
-    color: #666;
-    line-height: 30px;
+.pasoClase1,
+.pasoClase2,
+.pasoClase3 {
+  height: 50px;
+  padding: 0px;
+  color: #666;
+  line-height: 30px;
 }
-
 .color-sr1 {
-    border-color: #ea8795;
+  border-color: #ea8795;
 }
-
 .caja--ser-rel {
-    width: 94%;
-    display: block;
-    float: left;
-    padding: 20px;
-    height: auto;
-    border-style: dashed;
-    border-width: 1px;
-    background-color: #fff;
-    margin-left: 17px;
+  width: 94%;
+  display: block;
+  float: left;
+  padding: 20px;
+  height: auto;
+  border-style: dashed;
+  border-width: 1px;
+  background-color: #fff;
+  margin-left: 17px;
 }
-
 .form-control--ser-rel {
-    display: block;
-    width: 100%;
-    height: 53.5px;
-    padding: 0 14px;
-    font-size: 1em;
-    color: #333;
-    border: 3px solid #bfbfbf;
-    background: #fff;
+  display: block;
+  width: 100%;
+  height: 53.5px;
+  padding: 0 14px;
+  font-size: 1em;
+  color: #333;
+  border: 3px solid #bfbfbf;
+  background: #fff;
 }
 .color-sr2 {
-    border-color: #bebe73;
+  border-color: #bebe73;
 }
-
 .color-sr3 {
-    border-color: #66bce9;
+  border-color: #66bce9;
 }
-
-.boder_section_cdu{
-    border: 1px dashed #66bce9;
+.boder_section_cdu {
+  border: 1px dashed #66bce9;
 }
-
 .imgagen_tran:hover {
-    animation-name: colores;
-	/*animation-name: colores;*/
-	animation-duration: 5s; /*cuanto tiempo va a durar*/
-	animation-iteration-count: initial;/*que se repita la animación cuando acabe*/
+  animation-name: colores;
+  /*animation-name: colores;*/
+  animation-duration: 5s;
+  /*cuanto tiempo va a durar*/
+  animation-iteration-count: initial;
+  /*que se repita la animación cuando acabe*/
+}
+@keyframes colores {
+  /*from{background: #9EB3C2;}
+	to{background: #1B3B6F; }*/
+  0% {
+    background: #9EB3C2;
+  }
+  25% {
+    background: #1C7293;
+    width: 100px;
+  }
+  50% {
+    background: #043A53;
+    width: 120px;
+  }
+  75% {
+    background: #1B3B6F;
+    width: 100px;
+  }
+  100% {
+    background: #9EB3C2;
+    width: 90px;
+  }
+}
+.new_tab {
+  color: #000 !important;
+  font-size: 20px ;
+}
+.nav .new_tab:active {
+  color: #104d83 !important;
+  font-size: 23px ;
+}
+.nav .new_tab:focus {
+  color: #043A53;
+  font-size: 40px ;
+}
+.new_active:hover {
+  color: #043A53;
+  background: #E0F8F7 !important;
+}
+.new_active.active {
+  color: #156ab5 !important;
+}
+.new_active {
+  color: #000 !important;
 }
 
-@keyframes colores{
-	/*from{background: #9EB3C2;}
-	to{background: #1B3B6F; }*/ 
-	0% {background: #9EB3C2;}
-	25%{background: #1C7293; width: 100px;}
-	50%{background: #043A53; width: 120px}
-	75%{background: #1B3B6F; width: 100px;}
-	100%{background: #9EB3C2; width: 90px}
+@media (max-width: 1025px) {
+  .container_new {
+    padding-top: 24%;
+  }
+  .login-section {
+    padding-top: 0px;
+    margin-top: -20px;
+  }
+  .container_new_page {
+    margin-top: -5px;
+  }
+  .container_menu {
+    margin-top: -50px;
+  }
+  header {
+    position: fixed;
+    z-index: 100;
+    width: 100%;
+    margin-bottom: 1px;
+  }
+}
+@media (min-width: 321px) and (max-width: 769px) {
+  .container_new {
+    padding-top: 15%;
+  }
+  .table-responsive > .table > thead > tr > th,
+  .table-responsive > .table > tbody > tr > th,
+  .table-responsive > .table > tfoot > tr > th,
+  .table-responsive > .table > thead > tr > td,
+  .table-responsive > .table > tbody > tr > td,
+  .table-responsive > .table > tfoot > tr > td {
+    white-space: normal !important;
+  }
+  .tableident,
+  .tableangrav {
+    width: 25% !important;
+    text-align: center !important;
+  }
+  .tablenombre,
+  .tabledenomi {
+    width: 50% !important;
+  }
+  .tablefechas {
+    width: 90% !important;
+    text-align: center !important;
+  }
+  .offcanvas .sticky-nav-top {
+    width: 60%;
+  }
+  .navigation--bottom .nav__links--products {
+    max-width: 100%;
+    height: auto;
+    margin-left: -15px;
+    margin-right: -15px;
+    width: 60%;
+    display: block;
+    justify-content: center;
+    padding-left: 25px;
+    padding-right: 5px;
+    margin-bottom: 0;
+  }
+  .navigation--bottom .nav__links--products li a {
+    font-size: 12px;
+  }
+  
+  .navigation--bottom .navigation__overflow {
+
+    height: auto !important;
+
 }
 
-.new_tab{
-	color: #000 !important;
-	font-size: 20px ;
+ .navigation--bottom {
+ background-color: transparent;
+  }
+
+}
+@media (max-width: 320px) {
+  .container_new {
+    padding-top: 30%;
+  }
+  .table-responsive > .table > thead > tr > th,
+  .table-responsive > .table > tbody > tr > th,
+  .table-responsive > .table > tfoot > tr > th,
+  .table-responsive > .table > thead > tr > td,
+  .table-responsive > .table > tbody > tr > td,
+  .table-responsive > .table > tfoot > tr > td {
+    white-space: normal !important;
+  }
+  .tableident,
+  .tableangrav {
+    width: 25% !important;
+    text-align: center !important;
+  }
+  .tablenombre,
+  .tabledenomi {
+    width: 50% !important;
+  }
+  .tablefechas {
+    width: 90% !important;
+    text-align: center !important;
+  }
+  .offcanvas .sticky-nav-top {
+    width: 100%;
+  }
+  .navigation--bottom .nav__links--products {
+    max-width: 100%;
+    height: auto;
+    margin-left: -15px;
+    margin-right: -15px;
+    /*     width: 90%; */
+    width: 90%;
+    display: block;
+    justify-content: center;
+    padding-left: 25px;
+    padding-right: 5px;
+    margin-bottom: 0;
+    background: #000;
+  }
+  .navigation--bottom .nav__links--products li {
+    background-color: #0b0e12;
+    border-bottom: 1px solid #cecaca;
+    font-size: 12px;
+  }
+  .navigation--bottom {
+ background-color: transparent;
+  }
+  .navigation--bottom .nav__links--products li a {
+    font-size: 12px;
+  }
+  .navigation--bottom .nav__links--products .nav__links--secondary {
+    display: block;
+    background: #182029;
+    position: absolute;
+    z-index: 1000;
+    left: 0;
+    border: 1px solid #e7e7e7;
+    border-top: 0;
+    padding: 0 10px;
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+    
+     position: fixed;
+    z-index: 100;
+    width: 100%;
+    margin-bottom: 1px;
+  }
+
+
+  .navigation--bottom .navigation__overflow {
+
+    height: auto !important;;
+
 }
 
-.nav .new_tab:active{
-	color: #104d83 !important;
-	font-size: 23px ;
 }
-
-.nav .new_tab:focus{
-	color: #043A53;
-	font-size: 40px ;
-}
-
-.new_active:hover{
-	color: #043A53;
-	background: #E0F8F7 !important;
-}
-
-.new_active.active{
-	color: #156ab5 !important;
-}
-
-
-.new_active{
-	color: #000 !important;
-}
-
