Se agregan cambios a ROP y se agrega animación a la imagen de las páginas que tienen menú

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -617,7 +617,7 @@ width: 75px !important;
   margin-bottom: 30px;
 }
 .titulo--ser-rel {
-  font-family: Rajdhani;
+  font-family: Helvetica;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -640,7 +640,7 @@ width: 75px !important;
 .titulo-caja--ser-rel,
 span.pasos {
   font-weight: 700;
-  font-family: Rajdhani;
+  font-family: Helvetica;
 }
 span.pasos {
   padding: 1px 22px;
@@ -662,7 +662,7 @@ span.paso--uno {
 .titulo-caja--ser-rel,
 span.pasos {
   font-weight: 700;
-  font-family: Rajdhani;
+  font-family: Helvetica;
 }
 .titulo-caja--ser-rel {
   font-size: 1.25em;
