Se agregan cambios en Retención delineación urbana y se agrega código javascript para separar miles

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -585,7 +585,9 @@ width: 75px !important;
 .newalto {
   height: 38px !important;
   min-height: 30px !important;
-  width: 70%;
+  width: 75%;
+  text-align: left !important;
+  padding: 0px;
 }
 .form-group .new_alto,
 .new_alto {
