--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24545,7 +24545,9 @@ th {
 .newalto {
   height: 38px !important;
   min-height: 30px !important;
-  width: 70%;
+  width: 75%;
+  text-align: left !important;
+  padding: 0px;
 }
 .form-group .new_alto,
 .new_alto {
