Se agregan cambios a las vistas de vallas de publicidad exterior y se ajusta eliminación de filas en delineación urbana-declaracion/retencion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -933,4 +933,14 @@ span.pasos {
 
 }
 
+
+}
+
+.tamnew{
+width:70% !important;
+height: 30px !important;
+}
+
+.tam_button{
+width:50% !important;
 }
