--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -24882,3 +24882,10 @@ span.pasos {
     height: auto !important;
   }
 }
+.tamnew {
+  width: 70% !important;
+  height: 30px !important;
+}
+.tam_button {
+  width: 50% !important;
+}
