Se agregan cambios a tramites

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1017,4 +1017,24 @@ font-size: 48px;
 font-weight: 800;
 
 }
+.title_not{
+	color:#ef7987;
+}
+
+.noticias{
+	background: #c2ffae;
+	padding: 5px 5px;
+}
+.noticia{
+	border: 2px dashed #fff;
+	margin-right:10px;
+}
+.redes_sociales{
+	    display: block;
+}
+
+.addtoany_list{
+	display: inline-block;
+	widht: 30px !important;
+}
 /*termina escuela virtual*/
