Se agregan cambios y propuesta de escuela virtual

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -944,6 +944,8 @@ height: 30px !important;
 .tam_button{
 width:50% !important;
 }
+
+
 /*Estilos para escuela virtual*/
 .jumbotron {
 	background: #960505;
@@ -954,7 +956,6 @@ width:50% !important;
 	background: #fbd7bf !important;
 	padding: 5px 5px;
 }
-
 
 .jumbotron p {
 	font-size: 20px;
@@ -1011,26 +1012,47 @@ width:50% !important;
 	column-gap: 1.25rem;
 	orphans: 1;
 	widows: 1;
-}
-.trespasos_title{
-font-size: 48px;
-font-weight: 800;
-
-}
-.title_not{
-	color:#ef7987;
+	margin: 5px 5px;
 }
 
-.noticias{
+.trespasos_title {
+	font-size: 48px;
+	font-weight: 800;
+}
+
+.title_not {
+	color: #ef7987;
+}
+
+.noticias {
 	background: #c2ffae;
 	padding: 5px 5px;
 }
-.noticia{
+
+.noticia {
 	border: 2px dashed #fff;
-	margin-right:10px;
+	margin-right: 10px;
+	padding: 10px 10px;
 }
 
+.redes {
+	width: 80%;
+	max-width: 700px;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	margin-left: 40px;
+}
 
+.foot-esc {
+	font-size: 12px;
+	margin: 0px;
+	text-align: center;
+}
+/*termina escuela virtual*/ 
 
-
-/*termina escuela virtual*/
+.login-section {
+    margin-left: 70px;
+}
