Cambios en Obligaciones

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1056,3 +1056,30 @@ width:50% !important;
 .login-section {
     margin-left: 70px;
 }
+
+/*nuevos cambios en seccion menu*/
+.navigation--bottom {
+  width: 83% !important;
+}
+.breadcrumb-section {
+    width: 83% !important;
+}
+
+.navigation--middle .nav__right {
+    width: 93%;
+}
+
+.container {
+  width: 82%;
+}
+.container_menu {
+  width: 82%;
+}
+
+.container_new_page {
+  width: 82%;
+}
+
+.delededucciones {
+  width: 82%;
+}
