--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25005,16 +25005,17 @@ span.pasos {
 .delededucciones {
   width: 82%;
 }
-
-.tablefechas{
-	 width: 70px !important;
+.tablefechas {
+  width: 70px !important;
 }
-
-.lincostruc{
-	width: 93% !important;
-}	
-	
-.table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-    padding: 6px !important;
-
+.lincostruc {
+  width: 93% !important;
+}
+.table > thead > tr > th,
+.table > tbody > tr > th,
+.table > tfoot > tr > th,
+.table > thead > tr > td,
+.table > tbody > tr > td,
+.table > tfoot > tr > td {
+  padding: 6px !important;
 }
