Se agregan cambios para hacer más delagado la bara de menú

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1103,6 +1103,33 @@ width:50% !important;
 }
 
 .btn {
-  font-size: 14px !important;
+	font-size: 14px !important;
 }
 
+.navigation__overflow {
+	height: 60px !important;
+}
+
+.navigation--bottom ul.nav__links--products>li>span>a:hover,
+	.navigation--bottom ul.nav__links--products>li>span>a:focus {
+	background: transparent;
+}
+
+.navigation--bottom .nav__links--products .nav__links--secondary .sub-navigation-section .sub-navigation-list li a:hover,
+.navigation--bottom .nav__links--products .nav__links--secondary .sub-navigation-section .sub-navigation-list li a:focus {
+ background-color: #00ccff; 
+}
+
+.navigation--bottom .nav__links--products {
+    height: 60px !important;
+   
+}
+
+.navigation--bottom .nav__link {
+    height: 60px;
+}
+
+.navigation--bottom .nav__links--products li a {
+     height: 60px !important;
+         padding: 13px 15px;
+}
