Se agregan cambios a la barra de Menú, se hace mas larga y se ajustan campos Generales de Retenciones -delineacion Urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1049,34 +1049,7 @@ width:50% !important;
 .login-section {
   margin-left: 70px;
 }
-/*nuevos cambios en seccion menu*/
-.navigation--bottom {
-  width: 75% !important;
-}
-.breadcrumb-section {
-  width: 75% !important;
-}
-.navigation--middle .nav__right {
-  width: 89%;
-}
-.container {
-  width: 82%;
-}
-.container_menu {
-  width: 82%;
-}
-.container_new_page {
-  width: 75%;
-}
-.delededucciones {
-  width: 75%;
-}
-.tablefechas {
-  width: 70px !important;
-}
-.lincostruc {
-  width: 93% !important;
-}
+
 .table > thead > tr > th,
 .table > tbody > tr > th,
 .table > tfoot > tr > th,
@@ -1132,4 +1105,41 @@ width:50% !important;
 .navigation--bottom .nav__links--products li a {
      height: 60px !important;
          padding: 13px 15px;
+}
+
+/*nuevos cambios en seccion menu tamaño*/
+.navigation--bottom {
+	width: 86% !important;
+}
+
+.breadcrumb-section {
+	width: 86% !important;
+}
+
+.navigation--middle .nav__right {
+	width: 89%;
+}
+
+.container {
+	width: 82%;
+}
+
+.container_menu {
+	width: 82%;
+}
+
+.container_new_page {
+	width: 86%;
+}
+
+.delededucciones {
+	width: 86%;
+}
+
+.tablefechas {
+	width: 70px !important;
+}
+
+.lincostruc {
+	width: 93% !important;
 }
