Se agregan cambios al tamaño de los input de Inicio de sesión

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1143,3 +1143,8 @@ width:50% !important;
 .lincostruc {
 	width: 93% !important;
 }
+
+.form-group .tamnew, .tamnew {
+  height: 25px !important;
+  min-height: 2px !important;
+}
