--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25059,3 +25059,8 @@ span.pasos {
 .lincostruc {
   width: 93% !important;
 }
+.form-group .tamnew,
+.tamnew {
+  height: 25px !important;
+  min-height: 2px !important;
+}
