Se elimina el submenú de tramites y se hacen cambios en el hover del menú

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1144,7 +1144,18 @@ width:50% !important;
 	width: 93% !important;
 }
 
-.form-group .tamnew, .tamnew {
+/*cambio de tamaño en los campos de ingreso del login*/
+.form-group .tamnew,
+.tamnew {
   height: 25px !important;
   min-height: 2px !important;
+}
+
+/*nuevos cambios en el menú hover y linea a las subopciones*/
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li {
+   border-bottom: 1px solid #ffffff;
+}
+
+.navigation--bottom .nav__link:hover{
+    background: #56ace2;
 }
