--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25059,8 +25059,16 @@ span.pasos {
 .lincostruc {
   width: 93% !important;
 }
+/*cambio de tamaño en los campos de ingreso del login*/
 .form-group .tamnew,
 .tamnew {
   height: 25px !important;
   min-height: 2px !important;
+}
+/*nuevos cambios en el menú hover y linea a las subopciones*/
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li {
+  border-bottom: 1px solid #ffffff;
+}
+.navigation--bottom .nav__link:hover {
+  background: #56ace2;
 }
