Se agregan cambios para crear y asignarse como agente y se agrega propiedad hover para el menú

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25072,3 +25072,19 @@ span.pasos {
 .navigation--bottom .nav__link:hover {
   background: #56ace2;
 }
+
+.chkagent{
+	margin:2px !important;
+	}
+.fomchk{
+	margin:2px !important;
+}
+
+.container{
+	margin-top:10px!important;
+}
+
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li:hover {
+    background: #00ccff !important;
+   
+}
