--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1159,3 +1159,19 @@ width:50% !important;
 .navigation--bottom .nav__link:hover{
     background: #56ace2;
 }
+
+.chkagent{
+	margin:2px !important;
+	}
+.fomchk{
+	margin:2px !important;
+}
+
+.container{
+	margin-top:10px!important;
+}
+
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li:hover {
+    background: #00ccff !important;
+   
+}
