Ajuste de en Año Gravable para la seccion de  Valor Retenido

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25007,6 +25007,13 @@ span.pasos {
   min-width: 30% !important;
   max-width: 192px !important;
 }
+.new_alto_anio {
+  height: 25px !important;
+  min-height: 20px !important;
+  padding: 1px !important;
+  min-width: 30% !important;
+  max-width: 192px !important;
+}
 .btn {
   font-size: 14px !important;
 }
