--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1075,6 +1075,15 @@ width:50% !important;
   max-width: 192px !important;
 }
 
+.new_alto_anio {
+  height: 25px !important;
+  min-height: 20px !important;
+  padding: 1px !important;
+    min-width: 30% !important;
+  max-width: 192px !important;
+}
+
+
 .btn {
 	font-size: 14px !important;
 }
