--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1081,6 +1081,7 @@ width:50% !important;
   padding: 1px !important;
     min-width: 30% !important;
   max-width: 192px !important;
+    width: 133px !important;
 }
 
 
@@ -1198,4 +1199,12 @@ width:50% !important;
   height: 30px !important;
   min-height: 10px !important;
   width: 28%;
+}
+.etiq_valor{
+ margin-left: 30px !important;	
+  height: 25px !important;
+  min-height: 20px !important;
+  padding: 1px !important;
+  min-width: 30% !important;
+  max-width: 192px !important;
 }
