Se agregan cambios basados en incidencias de TI

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25112,3 +25112,9 @@ span.pasos {
   min-width: 30% !important;
   max-width: 192px !important;
 }
+
+.label1Ver:hover{
+	tex-decoration: underline !important;
+	cursor: pointer !important;
+	
+}
