--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1207,3 +1207,14 @@ width:50% !important;
   min-width: 30% !important;
   max-width: 192px !important;
 }
+
+.label1Ver:hover, .labelVer:hover{
+	text-decoration: underline !important;
+	cursor: pointer !important;
+	
+}
+
+
+.container_new_page {
+	width: 82%;
+}
