se agregan más cambios para corrección de incidentes por parte de usuario

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1218,3 +1218,9 @@ width:50% !important;
 .container_new_page {
 	width: 82%;
 }
+
+.format_label{
+	text-transform: none !important;
+    font-weight: 400 !important;
+
+}
