Se agregan cambios para consumo de servicio de detalle de vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25120,3 +25120,7 @@ span.pasos {
 .container_new_page {
   width: 82%;
 }
+.format_label {
+  text-transform: none !important;
+  font-weight: 400 !important;
+}
