Ajuste de certificacion  de declaracion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25115,6 +25115,7 @@ span.pasos {
 .label1Ver:hover,
 .labelVer:hover,
 .detalleVerCont:hover,
+labelVerDetalle:hover,
 labelVerDetalle:hover {
   text-decoration: underline !important;
   cursor: pointer !important;
