Cambios para detalle de sobrevehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1208,7 +1208,7 @@ width:50% !important;
   max-width: 192px !important;
 }
 
-.label1Ver:hover, .labelVer:hover, .detalleVerCont:hover, labelVerDetalle:hover, labelVerDetalle:hover{
+.label1Ver:hover, .labelVer:hover, .detalleVerCont:hover, labelVerDetalle:hover, labelVerDetalle:hover, labelVerDetVeh:hover{
 	text-decoration: underline !important;
 	cursor: pointer !important;
 	
