--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25116,7 +25116,8 @@ span.pasos {
 .labelVer:hover,
 .detalleVerCont:hover,
 labelVerDetalle:hover,
-labelVerDetalle:hover {
+labelVerDetalle:hover,
+labelVerDetVeh:hover {
   text-decoration: underline !important;
   cursor: pointer !important;
 }
