Se agregan catalogos para tabla detalle de vehiculos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25115,9 +25115,9 @@ span.pasos {
 .label1Ver:hover,
 .labelVer:hover,
 .detalleVerCont:hover,
-labelVerDetalle:hover,
-labelVerDetalle:hover,
-labelVerDetVeh:hover {
+.labelVerDetalle:hover,
+.labelVerDetalle:hover,
+.labelVerDetVeh:hover {
   text-decoration: underline !important;
   cursor: pointer !important;
 }
