--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1219,8 +1219,26 @@ width:50% !important;
 	width: 82%;
 }
 
-.format_label{
-	text-transform: none !important;
-    font-weight: 400 !important;
+.format_label {
+  text-transform: none !important;
+  font-weight: 400 !important;
+}
 
+.form-group .alto_select,
+.alto_select {
+  height: 25px !important;
+  min-height: 10px !important;
+  min-width: 20% !important;
+  max-width: 100% !important;
+  width: 100% !important;
+  font-size: 11px !important;
+}
+
+.form-group .newalto_dir,
+.newalto_dir{
+  height: 25px !important;
+  min-height: 20px !important;
+  padding: 1px 1px 1px 1px!important;
+  min-width: 20% !important;
+  max-width: 101% !important;
 }
