Se agregan cambios por atención de defectos de MI RIT

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25128,3 +25128,20 @@ span.pasos {
   text-transform: none !important;
   font-weight: 400 !important;
 }
+.form-group .alto_select,
+.alto_select {
+  height: 25px !important;
+  min-height: 10px !important;
+  min-width: 20% !important;
+  max-width: 100% !important;
+  width: 100% !important;
+  font-size: 11px !important;
+}
+.form-group .newalto_dir,
+.newalto_dir {
+  height: 25px !important;
+  min-height: 20px !important;
+  padding: 1px 1px 1px 1px!important;
+  min-width: 20% !important;
+  max-width: 101% !important;
+}
