--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/style.less
@@ -1229,9 +1229,12 @@ width:50% !important;
   height: 25px !important;
   min-height: 10px !important;
   min-width: 20% !important;
-  max-width: 100% !important;
-  width: 100% !important;
-  font-size: 11px !important;
+  max-width: 200% !important;
+  width: 103% !important;
+  font-size: 10.9px !important;
+  padding-left: 0px !important;
+  padding-right: 1px !important;
+  
 }
 
 .form-group .newalto_dir,
