--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25133,9 +25133,11 @@ span.pasos {
   height: 25px !important;
   min-height: 10px !important;
   min-width: 20% !important;
-  max-width: 100% !important;
-  width: 100% !important;
-  font-size: 11px !important;
+  max-width: 200% !important;
+  width: 103% !important;
+  font-size: 10.9px !important;
+  padding-left: 0px !important;
+  padding-right: 1px !important;
 }
 .form-group .newalto_dir,
 .newalto_dir {
